--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,12 @@ article img{
     transition: 0.6s;
 }
 
+@media screen and (max-width: 700px){
+    .container-for , .row{
+        flex-direction: column;
+    }
+}
+
 .container:hover{
     transition: 0.6s;
     background-color: #989DAA;
