--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ article img{
     transition: 0.6s;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (min-width: 700px){
     .container-for , .row{
         flex-direction: column;
     }
