--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,12 @@ article img{
     font-size: 30px;
 }
 
+@media screen and (max-width: 700px){
+    .container-refer{
+        flex-direction: column;
+    }
+}
+
 .ref{
     text-align: center;
     font-size: 30px;
@@ -219,6 +225,12 @@ article img{
     display: flex;
     justify-content: space-around;
     font-size: 30px;
+}
+
+@media screen and (max-width: 700px){
+    .container-for{
+        flex-direction: column;
+    }
 }
 
 .Bac{
