--- a/css/style.css
+++ b/css/style.css
@@ -223,11 +223,11 @@ article img{
 
 .container-for{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 30px;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 830px){
     .container-for{
         flex-direction: column;
     }
@@ -269,12 +269,19 @@ article img{
 .Goals{
     background-color: #57707A;
     color: white;
-    display: inline-block;
     padding: 15px;
     margin: 30px;
     transition: 0.6s;
     text-align: center;
-    margin-left: 300px;
+    
+}
+
+@media screen and (max-width: 830px){
+    .Goals{
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .Goals:hover{
